# polygon3-rs

./: Cargo.toml  README.md
fuzz/: .gitignore  Cargo.toml  fuzz.sh
fuzz/src/: main.rs
src/: convex_polygon.rs  lib.rs  polygon.rs  utils.rs
src/polygon/: contains.rs  operations.rs
src/polygon/operations/: queue.rs  sweep_line.rs  test.rs
src/polygon/operations/queue/: priority.rs
src/polygon/operations/sweep_line/: chain_end_connector.rs
src/utils/: conversions.rs
